--- a/FirstLessonProject/.eslintrc.json
+++ b/FirstLessonProject/.eslintrc.json
@@ -30,7 +30,8 @@
             "prefix": "app",
             "style": "kebab-case"
           }
-        ]
+        ],
+        "quotes": ["error", "single"]
       }
     },
     {
