Scss support added to project.

--- a/articles-app/angular.json
+++ b/articles-app/angular.json
@@ -5,7 +5,11 @@
   "projects": {
     "articles-app": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -24,10 +28,14 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",              
-              "src/styles.css"
+            "styles": [              
+              "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "node_modules"
+              ]
+            },
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
