--- a/articles-app/package.json
+++ b/articles-app/package.json
@@ -34,6 +34,7 @@
     "karma-coverage": "^2.2.1",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
+    "sass": "^1.77.6",
     "typescript": "^5.4.5"
   }
 }
