--- a/articles-app/package.json
+++ b/articles-app/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^18.0.4",
     "@angular/router": "^18.0.4",
     "bootstrap": "^5.3.3",
+    "express": "^4.19.2",
+    "path": "^0.12.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
